crates/runtime/tests/models/snapshots/integration_models__models__search__multi_embedding_parent_child_additional_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: normalize_search_response_json(resp, true)
---
        "cp_catalog_number": 1
      },
      "dataset": "multiple_columns",
      "matches": {
        "cp_department": [
          "DEPARTMENT"
        ],
        "cp_description": [
          "Programmes receive just likely, key homes. Relevant,"
        ]
      },
      "primary_key": {
        "cp_department": [
          "DEPARTMENT"
        ],
        "cp_description": [
          "In general basic characters welcome. Clearly lively friends conv"
        ]
      },
      "primary_key": {
        "cp_catalog_page_sk": 1
      }
    }
  ]
}
