crates/runtime/tests/models/snapshots/integration_models__models__search__multi_embedding_parent_child_basic_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: "normalize_search_response_json(resp, true)"
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "_score": "0.03",
      "dataset": "multiple_columns",
      "matches": {
        "cp_department": [
          "DEPARTMENT"
        ],
        "cp_description": [
          "Programmes receive just likely, key homes. Relevant,"
        ]
      },
      "primary_key": {
        "cp_catalog_page_sk": 1
      }
    },
    {
      "_score": "0.03",
      "dataset": "multiple_columns",
      "matches": {
        "cp_department": [
          "DEPARTMENT"
        ],
        "cp_description": [
          "Programmes receive just likely, key homes. Relevant,"
        ]
      },
      "primary_key": {
        "cp_catalog_page_sk": 11
      }
    }
  ]
}
