crates/runtime/tests/models/snapshots/integration_models__models__search__multi_embedding_parent_child_where_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: normalize_search_response(resp)
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "_score": "0.03",
      "dataset": "multiple_columns",
      "matches": {
        "cp_department": [
          "DEPARTMENT"
        ],
        "cp_description": [
          "Members comfort major horses. All good vehicles must perform ago wrong new conditions. Pl"
        ]
      },
      "primary_key": {
        "cp_catalog_page_sk": 20
      }
    }
  ]
}
