crates/runtime/tests/models/snapshots/integration_models__models__search__multi_embedding_sql_no_score_error_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: e.to_string()
snapshot_kind: text
---
HTTP error: 400 Bad Request - Schema mismatch: Expected and actual number of fields in the query result don't match: expected 1, received 2
