crates/runtime/tests/models/snapshots/integration_models__models__search__multi_embeddings_additional_columns_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: "normalize_search_response(resp, round_scores)"
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "_score": "0.65",
      "data": {
        "question": "<refined question>"
      },
      "dataset": "qs",
      "matches": {
        "answer": [
          "<refined solution>  \n\n*(Repeated for each question-answer pair above.)"
        ]
      },
      "primary_key": {
        "id": 6
      }
    },
    {
      "_score": "0.64",
      "data": {
        "question": "Compare the fractions and write the appropriate sign ('<', '>', or '=') between them:  \n$\\frac{5}{6} \\square \\frac{5}{5}$"
      },
      "dataset": "qs",
      "matches": {
        "answer": [
          "$\\frac{5}{6} < \\frac{5}{5}$ because $\\frac{5}{6}$ is less than 1, while $\\frac{5}{5}$ equals 1.  \n\nFinal answer: $\\boxed{<}$"
        ]
      },
      "primary_key": {
        "id": 58
      }
    },
    {
      "_score": "0.63",
      "data": {
        "question": "Is $\\frac{7 \\text { erasers }}{12 \\text { pencils }}$ an example of a ratio or a rate?"
      },
      "dataset": "qs",
      "matches": {
        "answer": [
          "This is an example of a $\\boxed{\\text{rate}}$ because it compares two unlike denominate numbers (erasers and pencils)."
        ]
      },
      "primary_key": {
        "id": 543
      }
    },
    {
      "_score": "0.63",
      "data": {
        "question": "Write the decimal `2.3` in words and then express it as a fraction or mixed number."
      },
      "dataset": "qs",
      "matches": {
        "answer": [
          "1. In words: \"two and three tenths.\"  \n2. As a fraction: \\(\\boxed{\\dfrac{23}{10}}\\)."
        ]
      },
      "primary_key": {
        "id": 1318
      }
    }
  ]
}
