crates/runtime/tests/models/snapshots/integration_models__models__search__multi_embeddings_with_where_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: "normalize_search_response(resp, round_scores)"
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "_score": "0.63",
      "dataset": "qs",
      "matches": {
        "answer": [
          "$\\boxed{\\text{True}}$, because severe post-treatment cardiopulmonary complications sometimes occur."
        ]
      },
      "primary_key": {
        "id": 120
      }
    },
    {
      "_score": "0.63",
      "dataset": "qs",
      "matches": {
        "answer": [
          "<refined solution>  \n\n*(Repeated for each question-answer pair above.)"
        ]
      },
      "primary_key": {
        "id": 6
      }
    },
    {
      "_score": "0.62",
      "dataset": "qs",
      "matches": {
        "answer": [
          "Consequential late effects are late effects that develop as a consequence of severe early effects."
        ]
      },
      "primary_key": {
        "id": 810
      }
    },
    {
      "_score": "0.62",
      "dataset": "qs",
      "matches": {
        "answer": [
          "Relative or \"stress\" polycythaemia, which is secondary to a depletion in the plasma volume."
        ]
      },
      "primary_key": {
        "id": 890
      }
    }
  ]
}
